--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,11 @@ maven_group=io.github.yuko1101
 archives_name=nightmare
 enabled_platforms=fabric,neoforge
 # Minecraft properties
-minecraft_version=1.21.4
+minecraft_version=1.21.1
 # Dependencies
 fabric_loader_version=0.16.10
-neoforge_version=21.4.79-beta
+neoforge_version=21.1.115
 # Mappings
-yarn_mappings=1.21.4+build.8
+yarn_mappings=1.21.1+build.3
 yarn_mappings_patch_neoforge=1.21+build.4
 
